--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <div class="card">
     <div id="screen-main" class="screen active">
       <h1>Casa comigo? 💍</h1>
-      <p class="lead">Eu sei que a gente tem drama, mas ando pensando em nós... responde com o coração ❤️</p>
+      <p class="lead"></p>
       <div class="buttons" id="buttonsWrap">
         <button id="yesBtn" class="btn green">Sim, te amo 😍</button>
         <button id="noBtn" class="btn red">Não seu arrombado 🤬🖕</button>
